[package]
name = "ensembler"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/jdx/ensembler"
homepage = "https://github.com/jdx/ensembler"
documentation = "https://docs.rs/ensembler"
license = "MIT"
description = "A library for running commands and reporting progress"
rust-version = "1.88.0"
include = ["/LICENSE", "/README.md", "/src/**", "/examples/**"]

[lib]
name = "ensembler"
path = "src/lib.rs"

[features]
default = ["progress"]
progress = ["dep:clx"]

[dependencies]
clx = { version = "<1", optional = true }
console = "0.16"
indexmap = "2"
indicatif = "0.18"
log = "0.4"
terminal_size = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util = "0.7"

[dev-dependencies]
test-log = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "user"] }

[[example]]
name = "run"
required-features = ["progress"]
